[VL-4] Make JdbcFilmRepository saveAll working